--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ go:
   - 1.9.2
 
 script:
-- go test -v ./...
-- go test -tags="debug" -v ./...
-- go test -tags="trace" -v ./...
+- go test -race -v ./...
+- go test -race -tags="debug" -v
+- go test -race -tags="trace" -v -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+- bash <(curl -s https://codecov.io/bash)
